clusters/sirius/apps/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-external
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - grafana.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-internal
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - grafana.sirius.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-internal-redirect
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - grafana.sirius.moonblade.work
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
